--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: hsl(233, 10%, 18%);
+  background: white;
 }
 
 h2 {
@@ -207,6 +207,10 @@ input {
     padding: 20px;
   }
 
+  .comment p {
+    display: none;
+  }
+
   .ads {
     display: flex;
     align-items: center;
@@ -358,7 +362,7 @@ input {
 }
 
 @media screen and (max-width: 650px){
-  .header {
+  header {
     height: 500px;
   }
 
@@ -386,20 +390,20 @@ input {
       height: 10px;
       width: 300px;
     }
-
+    
+    .seven__days__trial {
+      height: 70px;
+      width: 350px;
+    }
+    
+    .seven__days__trial h3 {
+      font-size: 17px;
+    }
+    
   .menu {
-    display: block;
+    display: block
   }
-
-  .seven__days__trial {
-    height: 70px;
-    width: 350px;
-  }
-
-  .seven__days__trial h3 {
-    font-size: 17px;
-  }
-
+    
   .seven__days__trial a {
     font-size: 15px;
   }
@@ -414,6 +418,10 @@ input {
 
   .main h2 {
     font-size: 30px;
+  }
+
+  .comment p {
+    display: none;
   }
 
   .data,
@@ -460,12 +468,126 @@ input {
     width: 30px;
   }
 
-  .third-footer {
-  }
-
   .copyright {
     top: 80%;
     left: 12%;
     font-size: 25px;
+  }
+}
+
+@media screen and (max-width: 355px) {
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  header {
+    height: 400px;
+  }
+
+  h2 {
+    font-size: 15px;
+  }
+
+  h3 {
+    font-size: 12px;
+  }
+
+  .logo-one {
+    width: 70px;
+  }
+
+  .text {
+    display: none;
+  }
+
+  .box {
+    height: 100px;
+  }
+  
+  .seven__days__trial {
+    height: 50px;
+    width: 250px;
+  }
+  
+  .seven__days__trial h3 {
+    font-size: 12px;
+  }
+  
+  .seven__days__trial a {
+    font-size: 10px;
+  }
+
+  button p {
+    font-size: 10px
+  }
+
+  .main h2 {
+    margin-top: 0;
+    font-size: 20px;
+  }
+
+  .data,
+  .ads,
+  .tv,
+  .devices {
+    height: 150px;
+  }
+
+  .comment {
+    padding: 20px 0;
+  }
+
+  .comment h3 {
+    display: none;
+  }
+
+  .comment p {
+    display: block;
+    font-size: 10px;
+    color: white;
+  }
+
+  .logo-two {
+    width: 100px;
+  }
+
+  .social-media {
+    gap: 30px;
+  }
+
+  .social-media img {
+    width: 20px;
+  }
+
+  .second-footer {
+    width: 100%;
+  }
+
+  .second-footer ul li a {
+    font-size: 15px;
+  }
+
+  .third-footer {
+    align-items: center;
+  }
+
+  .third-footer__text {
+    width: 200px;
+  }
+
+  .go {
+    height: 40px;
+    width: 80px;
+  }
+
+  .go p {
+    font-size: 12px;
+  }
+
+  .copyright {
+    top: 70%;
+    font-size: 15px;
   }
 }
