added some styles to css

--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background: white;
+  background: hsl(233, 12%, 13%);
 }
 
 h2 {
@@ -103,8 +103,8 @@ nav {
 .seven__days__trial a {
     text-decoration: none;
     color: hsl(12, 88%, 59%);
-}
-
+  }
+  
 span {
     color: hsl(12, 88%, 59%);
 }
@@ -159,7 +159,7 @@ input {
   }
   
   .glide__slides {
-    height: 600px;
+    height: 500px;
   }
 
   .main {
@@ -341,17 +341,24 @@ input {
     padding: 20px;
 }
 
-.go {
+.email_us_btn {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 50px;
-    width: 100px;
+    width: 150px;
     border-radius: 30px;
     background-color: hsl(12, 88%, 59%);
     color: white;
     float: right;
     font-weight: 600;
+    transition: 0.5s ease-in-out;
+}
+
+.email_us_btn:hover {
+  cursor: pointer;
+  border: 2px solid hsl(12, 88%, 59%);
+  background-color: transparent;color: hsl(12, 88%, 59%);
 }
 
 .copyright {
@@ -387,8 +394,7 @@ input {
   }
 
   .text {
-      height: 10px;
-      width: 300px;
+    display: none;
     }
     
     .seven__days__trial {
@@ -420,8 +426,15 @@ input {
     font-size: 30px;
   }
 
-  .comment p {
+  .comment h3 {
     display: none;
+  }
+
+  .comment p {
+    display: block;
+    font-size: 15px;
+    line-height: 1rem;
+    color: white;
   }
 
   .data,
@@ -450,10 +463,11 @@ input {
   .second-footer {
     justify-content: center;
     gap: 50px;
+    width: 100%;
   }
 
   .second-footer ul li a {
-    font-size: 20px;
+    font-size: 15px;
   }
 
   .logo-two {
@@ -468,10 +482,16 @@ input {
     width: 30px;
   }
 
+  .third-footer {
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  }
+
   .copyright {
-    top: 80%;
-    left: 12%;
-    font-size: 25px;
+    top: 85%;
+    left: 20%;
+    font-size: 20px;
   }
 }
 
@@ -545,7 +565,7 @@ input {
 
   .comment p {
     display: block;
-    font-size: 10px;
+    font-size: 15px;
     color: white;
   }
 
@@ -574,12 +594,11 @@ input {
   }
 
   .third-footer__text {
-    width: 200px;
+    width: 150px;
   }
 
   .go {
-    height: 40px;
-    width: 80px;
+    display: none;
   }
 
   .go p {
