--- a/css/index.css
+++ b/css/index.css
@@ -142,7 +142,7 @@ input {
     font-size: 17px;
     font-family: Arial, Helvetica, sans-serif;
   }
-  
+
   .glide__slide {
     filter: blur(5px);
     opacity: .7;
@@ -163,7 +163,8 @@ input {
   }
   
   .glide__slides {
-    height: 500px;
+    height: 550px;
+    padding-top: 20px !important;
   }
 
   .main {
@@ -171,13 +172,14 @@ input {
     flex-direction: column;
     align-items: center;
     gap: 70px;
-    padding: 70px 20px;
+    padding: 50px 20px;
     background: hsl(233, 12%, 13%);
   }
 
   .main h2 {
     color: hsl(12, 88%, 59%);
     font-size: 32px;
+    margin-top: 0;
     margin-left: 20px;
   }
 
@@ -197,10 +199,11 @@ input {
     width: 50%;
   }
 
-  .data_image img{
+  .data_image img,
+  .tv_image img{
+    height: 300px;
     width: 100%;
     border-radius: 10px 0 0 10px;
-    box-shadow: 0 0 10px white;
   }
 
   .comment {
@@ -231,12 +234,12 @@ input {
     width: 50%;
   }
 
-  .ads img{
-    width: 70%;
+  .ads_image img,
+  .devices img{
+    height: 300px;
+    width: 100%;
     border-radius: 0 10px 10px 0;
-    box-shadow: 0 0 10px gray;
   }
-
   
   .tv {
     display: flex;
@@ -253,13 +256,6 @@ input {
   .tv_image {
     width: 50%;
   }
-
-  .tv img{
-    width: 100%;
-    border-radius: 10px 0 0 10px;
-    box-shadow: 0 0 10px gray;
-  }
-
   
   .devices {
     display: flex;
@@ -275,12 +271,6 @@ input {
 
   .devices_image {
     width: 50%;
-  }
-
-  .devices img{
-    width: 100%;
-    border-radius: 0 10px 10px 0;
-    box-shadow: 0 0 10px gray;
   }
 
   footer {
@@ -418,7 +408,7 @@ input {
     height: 90%;    
   }
 
-  ul {
+  #menu ul {
     display: flex;
     flex-direction: column;
     gap: 20px;
