--- a/css/login.css
+++ b/css/login.css
@@ -16,6 +16,7 @@ h2 {
 
 h3 {
     font-size: 15px;
+    color: white;
 }
 
 .bg_image {
@@ -65,7 +66,7 @@ form {
     color: rgba(255, 255, 255, 0.74);
   }
 
-  button {
+  .login_btn {
     height: 50px;
     width: 80%;
     outline: none;
@@ -124,4 +125,5 @@ form {
     .box {
         background-color: hsla(12, 88%, 59%, 0.461);
     }
+
   }
