--- a/css/register.css
+++ b/css/register.css
@@ -44,6 +44,13 @@ h3 {
     z-index: -1;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
+  margin-bottom: 50px;
+}
+
 .logo {
     width: 100px;
 }
