--- a/css/index.css
+++ b/css/index.css
@@ -43,7 +43,7 @@ nav {
     align-items: center;
     padding: 0 50px;
     height: 100px;
-    background-color: rgba(0, 0, 0, 0.671);
+    background-color: hsla(233, 10%, 18%, 0.637);
 }
 
 #menu {
@@ -335,12 +335,20 @@ input {
     padding: 20px;
 }
 
-.email_us_btn {
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+form button {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 50px;
     width: 150px;
+    border: 0;
     border-radius: 30px;
     background-color: hsl(12, 88%, 59%);
     color: white;
@@ -349,7 +357,7 @@ input {
     transition: 0.5s ease-in-out;
 }
 
-.email_us_btn:hover {
+form button:hover {
   cursor: pointer;
   border: 2px solid hsl(12, 88%, 59%);
   background-color: transparent;color: hsl(12, 88%, 59%);
@@ -381,6 +389,14 @@ input {
     z-index: -1;
     height: 100%;
     width: 100%;
+  }
+
+  nav {
+    height: 70px;
+    position: fixed;
+    right: 0;
+    left: 0;
+    z-index: 1;
   }
 
   .logo-one {
@@ -527,11 +543,11 @@ input {
     }
 
   .third_footer_input {
-    width: 90%;
+    width: 100%;
     height: 40px;
   }
 
-  .email_us_btn {
+  form button {
     height: 40px;
   }
 
