chnaged the menu list

--- a/css/index.css
+++ b/css/index.css
@@ -46,7 +46,11 @@ nav {
     background-color: hsla(233, 10%, 18%, 0.637);
 }
 
-#menu {
+nav #menu {
+  display: none;
+}
+
+#menu ul {
   display: none;
 }
 
@@ -393,6 +397,7 @@ form button:hover {
 
   nav {
     height: 70px;
+    background-color: hsl(233, 12%, 13%);
     position: fixed;
     right: 0;
     left: 0;
@@ -417,11 +422,16 @@ form button:hover {
     }
     
   .hamburger_icon {
-    display: block
+    display: block;
   }
 
   #menu { 
-    height: 90%;    
+    margin-top: 70px;
+    height: 50%;    
+    width: 50%;
+    position: fixed;
+    right: 0;
+    z-index: 1;
   }
 
   #menu ul {
@@ -429,7 +439,9 @@ form button:hover {
     flex-direction: column;
     gap: 20px;
     padding: 20px;
+    width: 100%;
     background: hsl(233, 12%, 13%);
+    transition: 5s ease-in-out;
   }
 
   ul li {
@@ -439,7 +451,7 @@ form button:hover {
   #menu ul li a {
     text-decoration: none;
     color: white;
-    font-size: 30px;
+    font-size: 20px;
   }
     
   .seven__days__trial a {
