--- a/css/index.css
+++ b/css/index.css
@@ -46,11 +46,7 @@ nav {
     background-color: hsla(233, 10%, 18%, 0.637);
 }
 
-nav #menu {
-  display: none;
-}
-
-#menu ul {
+#menu {
   display: none;
 }
 
@@ -398,9 +394,13 @@ form button:hover {
   nav {
     height: 70px;
     position: fixed;
+    justify-content: none;
+    padding: 0 20px;
+    gap: 50%;
     right: 0;
     left: 0;
     z-index: 1;
+    background-color: hsl(233, 12%, 13%);
   }
 
   .logo-one {
@@ -421,19 +421,27 @@ form button:hover {
     }
     
   .hamburger_icon {
-    display: block;
+    display: block
   }
 
   #menu { 
     height: 90%;    
+    position: fixed;
+    right: 0;
+    margin-top: 70px;
+    z-index: 1;
+    display: none;
   }
 
   #menu ul {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    height: 100vh;
+    width: 100vw;
     padding: 20px;
     background: hsl(233, 12%, 13%);
+    transition: 3s linear;
   }
 
   ul li {
@@ -443,7 +451,7 @@ form button:hover {
   #menu ul li a {
     text-decoration: none;
     color: white;
-    font-size: 30px;
+    font-size: 24px;
   }
     
   .seven__days__trial a {
