--- a/css/login.css
+++ b/css/login.css
@@ -31,6 +31,7 @@ h3 {
     align-items: center;
     gap: 20px;
     height: 100%;
+    max-height: 100%;
     width: 50%;
     border-radius: 10px;
 }
@@ -55,6 +56,7 @@ form {
     background: transparent;
     border: 0;
     border-bottom: 1px solid white;
+    outline: none;
     color: white;
     padding: 0 20px;
     font-size: 17px;
