--- a/css/register.css
+++ b/css/register.css
@@ -31,6 +31,7 @@ h3 {
     align-items: center;
     gap: 20px;
     height: 100%;
+    max-width: 100%;
     width: 50%;
     border-radius: 10px;
     position: relative;
@@ -67,6 +68,7 @@ form {
     background: transparent;
     border: 0;
     border-bottom: 1px solid white;
+    outline: none;
     color: white;
     padding: 0 20px;
     font-size: 17px;
